Fixed dark mode style and favories avatars.

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ code {
   text-align: left;
   margin: 0;
   margin-bottom: 5px;
+  color: var(--DarkJungleGreen);
+}
+
+.TitleAllCharacters-DarkMode {
+  color: var(--White);
 }
 
 .characters-favorites-container {
@@ -40,10 +45,10 @@ code {
 
 .favorite-character-avatar {
   border: solid 1px var(--SteelBlue);
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
-  margin-left: -45px;
+  margin-left: -35px;
 }
 
 .btn-LD-Mode {
